--- a/Command_Pattern_Code/DylanRoberts_Command/MainPage.xaml
+++ b/Command_Pattern_Code/DylanRoberts_Command/MainPage.xaml
@@ -9,6 +9,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <Button Width="50px" Height="50px">Hello</Button>
 
     </Grid>
 </Page>
