Setup to the asignment XAML

--- a/Command_Pattern_Code/DylanRoberts_Command/MainPage.xaml
+++ b/Command_Pattern_Code/DylanRoberts_Command/MainPage.xaml
@@ -8,8 +8,9 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <Button Width="50px" Height="50px">Hello</Button>
+    <Grid Background="Azure">
+        <Grid.RowDefinitions></Grid.RowDefinitions>
+        <Grid.RowDefinitions ></Grid.RowDefinitions>
 
     </Grid>
 </Page>
