--- a/Command_Pattern_Code/DylanRoberts_Command/MainPage.xaml
+++ b/Command_Pattern_Code/DylanRoberts_Command/MainPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid >
+    <Grid Background="White">
         <Grid.ColumnDefinitions >
             <ColumnDefinition Width="300px"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -111,9 +111,12 @@
 
         </Grid>
          
-        <Grid Grid.Column="2" Background="Black">
+        <!--grid for moving the block-->
+        
+
+        <Canvas x:Name="gameBoard" Grid.Column="2" Background="Black">
             
-        </Grid>
+        </Canvas>
         
         
         
